udf-macros/tests/fail/wrong_block.stderr
error: expected `impl`
 --> tests/fail/wrong_block.rs:7:1
  |
7 | struct X {}
  | ^^^^^^
